--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@mui/icons-material": "^5.16.1",
     "@mui/material": "^5.16.1",
+    "@tanstack/react-query": "^5.51.1",
     "autoprefixer": "^10.4.19",
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
